--- a/p1/p1.md
+++ b/p1/p1.md
@@ -121,7 +121,7 @@ As mentioned earlier, Symbolic AI was severely limited by its lack of "intuition
 
 How can that be? To understand this paradox, consider [this cat](https://unsplash.com/photos/brown-tabby-cat-E3LcqpQxtTU):
 
-![Photo of the best kitty cat in the whole dang world](../media/p1/image.png)*(consider them.)*
+![Photo of the best kitty cat in the whole dang world](../media/p1/best_cat.png)*(consider them.)*
 
 What were *the step-by-step rules* you used to recognize that as a cat?
 
@@ -130,7 +130,7 @@ Weird question, right? You *didn’t* use step-by-step rules, it just... came to
 * **"Logic"**: step-by-step cognition, like solving math problems.
 * **"Intuition"**: all-at-once *re*cognition, like seeing a cat.
 
-("Logic and Intuition" will be more precisely explained — and tied to human psychology! — later on in Part One, in the section, "AI Today: The quest to merge Logic & Intuition".)
+("Logic and Intuition" will be more precisely explained — and tied to human psychology! — later on in Part One, in the section, "AI Today: The quest to merge Logic & Intuition.")
 
 That’s the problem with Symbolic AI: it requires *writing down step-by-step rules*. Outside of well-defined tasks like chess, we usually don’t even *consciously know* what rules we’re using. That’s why Symbolic AI failed at understanding images, sounds, speech, and so on. For a lack of a better word, AI had no "intuition".
 
@@ -186,7 +186,8 @@ Want to actually remember what you've read here, instead of forgetting it all 2 
     <orbit-prompt
         question="Who's widely considered the founder of Computer Science & Artificial Intelligence?"
         answer="Alan Turing (this handsome fella)"
-        answer-attachments="https://anotheroldguy.files.wordpress.com/2019/03/placehold.jpg">
+        answer-attachments="https://cloud-c1yyfcjxd-hack-club-bot.vercel.app/0aisffs-turing.jpg">
+        <!-- anki-image="aisffs-turing.jpg" -->
     </orbit-prompt>
     <orbit-prompt
         question="The two main eras of AI (more or less):"
@@ -467,9 +468,9 @@ The moral of the story is there is no moral and there is no story. History is cr
     </orbit-prompt>
     <orbit-prompt
         question="Visualize what an Artificial Neural Network (ANN) looks like:"
-        answer="TODO"
+        answer=""
+        answer-attachments="https://cloud-rj2crsmrc-hack-club-bot.vercel.app/0aisffs-ann.png">
         <!-- anki-image="aisffs-ann.png" -->
-        answer-attachments="https://anotheroldguy.files.wordpress.com/2019/03/placehold.jpg">
     </orbit-prompt>
     <orbit-prompt
         question="Two synonyms for 'Artificial Neural Network':"
@@ -477,9 +478,9 @@ The moral of the story is there is no moral and there is no story. History is cr
     </orbit-prompt>
     <orbit-prompt
         question="Venn diagram of how AI, Symbolic AI, Machine Learning, and Deep Learning all relate to each other:"
-        answer="TODO"
+        answer=""
+        answer-attachments="https://cloud-fq79f7d0i-hack-club-bot.vercel.app/0aisffs-venn.png">
         <!-- anki-image="aisffs-venn.png" -->
-        answer-attachments="https://anotheroldguy.files.wordpress.com/2019/03/placehold.jpg">
     </orbit-prompt>
     <orbit-prompt
         question="Why was Connectionist AI buried for half a century?"
@@ -499,7 +500,7 @@ So, AI Safety is solved, right? Just give an AI all the data on humanity's art, 
 
 Well, a few problems. First off, Deep Learning has the *opposite* problem of Symbolic AI: it's great at "intuition", but sucks at step-by-step logic:
 
-![](../media/p1/17120791946488.jpg) _(found [by Elias Schmied in Jan 2023](https://twitter.com/reconfigurthing/status/1615123364372152321))_
+![](../media/p1/chatgpt-lol.jpg) _(found [by Elias Schmied in Jan 2023](https://twitter.com/reconfigurthing/status/1615123364372152321))_
 
 But even beyond *that*, there's lots of other safety & ethical problems with AI "Intuition"...
 
@@ -532,7 +533,7 @@ But even if you gave an AI less biased data... that may not matter, because:
 
 Here was a bug from OpenAI's state-of-the-art machine vision in 2021:[^openai-apple]
 
-![Left: a photo of an apple, which the AI correctly classifies as a Granny Smith apple. Right: the same apple, with a piece of paper on it with the handwritten word 'iPod'. The AI is now 99.7% confident it's an Apple iPod.](../media/p1/17119063954144.jpg)
+![Left: a photo of an apple, which the AI correctly classifies as a Granny Smith apple. Right: the same apple, with a piece of paper on it with the handwritten word 'iPod'. The AI is now 99.7% confident it's an Apple iPod.](../media/p1/openai-lol.jpg)
 
 Another fun example: [:Google's AI mistakes a toy turtle for a gun](https://www.youtube.com/watch?v=piYnd_wYlT8), from almost any angle. A more tragic example: the first Tesla AutoPilot fatality in 2016 happened when the AutoPilot AI mistook a truck trailer — which was elevated slightly higher than usual — for a road sign, or possibly the sky.[^tesla-fatality]
 
@@ -586,13 +587,14 @@ As of writing: we can't easily check, explain, or verify *any* of this stuff.
         answer="(Either answer works:) Out-of-Distribution Error, Robustness failure">
     </orbit-prompt>
     <orbit-prompt
-        question="A funny example of AI intuition breaking"
+        question="A funny example of AI intuition breaking, in machine vision"
         answer=""
-        answer-attachments="https://anotheroldguy.files.wordpress.com/2019/03/placehold.jpg">
+        answer-attachments="https://cloud-aiu8gz8aq-hack-club-bot.vercel.app/0aisffs-apple.jpg">
+        <!-- anki-image="aisffs-apple.jpg" -->
     </orbit-prompt>
     <orbit-prompt
         question="A name for the risk of AI's *goals* breaking, but its *skills* remain intact:"
-        answer="Inner misalignment">
+        answer="(Either answer works:) Goal misgeneralization, Inner misalignment">
     </orbit-prompt>
     <orbit-prompt
         question="Why is “broken goals, intact skills” more dangerous than an AI that just breaks entirely?"
@@ -683,13 +685,11 @@ Photo is by [Jamie Decillion on Wikipedia](https://commons.wikimedia.org/wiki/Fi
 <orbit-reviewarea>
     <orbit-prompt
         question="Moore's Law (*very* roughly paraphrased):"
-        answer="“Every 2 years, computing power doubles.”"
-        answer-attachments="https://anotheroldguy.files.wordpress.com/2019/03/placehold.jpg">
+        answer="“Every 2 years, computing power doubles.”">
     </orbit-prompt>
     <orbit-prompt
-        question="AI Scaling Law for GPT (roughly):"
-        answer="“Every time you increase GPT's neural network size by 10,000x, it gets 2x better.”"
-        answer-attachments="https://anotheroldguy.files.wordpress.com/2019/03/placehold.jpg">
+        question="AI Scaling Law for GPT (*very* roughly paraphrased):"
+        answer="“Every time you throw 1,000,000x more compute at training GPT, it gets 2x better.”">
     </orbit-prompt>
     <orbit-prompt
         question="An argument that Moore's Law will end soon, if it hasn't already:"
@@ -718,13 +718,11 @@ There's another way to think about the problems of Symbolic AI versus ANNs, cour
 
 You could graph System 1 & 2 like this:
 
-![Two-axis graph of System 1 ("intuitive") vs System 2 (logical) thinking. A calculator is high System 2, low System 1. Young children are high System 1, low System 2. The typical human adult range is a high value of both.](../media/p1/XzcFGhPlwn6QhICF00afmRQKRaXJiKWzEoHGNKcSw6oKnpqh2FyeaUvZVK7FCZIigFR-rZRynfPBRgUgC64Ajs0blXM1ZZVswMROseOSOjq_VG-CUX2UWXmyw-sMQQdAYxGEM07T5A5qq1kNrwS_Xj0.png)
+![Two-axis graph of System 1 ("intuitive") vs System 2 (logical) thinking. A calculator is high System 2, low System 1. Young children are high System 1, low System 2. The typical human adult range is a high value of both.](../media/p1/sys1vs2_A.png)
 
 And here's what the trajectories of Symbolic AI and Deep Learning look like:
 
-![Same graph as before, but with two arrows showing the trajectories of Old Symbolic AI and New Deep Learning AI. Old Symbolic AI is all System 2, no System 1. Deep Learning is lost of System 1, little System 2. Both arrow-trajectories are missing the "typical human adult range".](../media/p1/dRwUwA9n87XBNxlDkMcpxE1QSXpDLFnflU-_Yc4CeUg5MENgIGvt8m7zoOyamv_VLzC53wS97emVIFluj5ZDbtIyfvCaslV6kpcikwhHFUtymRwT6I84c_5Bt_tU-qoIK-OdgdaXW02MC7bWGyHusvI.png)
-<!-- TODO: Re-label NEW & OLD -->
-
+![Same graph as before, but with two arrows showing the trajectories of Old Symbolic AI and New Deep Learning AI. Old Symbolic AI is all System 2, no System 1. Deep Learning is lost of System 1, little System 2. Both arrow-trajectories are missing the "typical human adult range".](../media/p1/sys1vs2_B.png)
 This is why Good Old Fashioned Symbolic AI (red line) hit a dead end: its trajectory was pointing *in the wrong direction*. It was great at System 2, but sucked at System 1: like beating the world champion at chess, but failing to recognize cats.
 
 Likewise, this is why I think *current* AI methods, *unless it fundamentally changes course*, will also hit a dead end. Why? Because its current direction is all System 1, only a little System 2. That's why right now, AI can generate "art" at a super-human rate, yet can't consistently place multiple objects in a scene.
@@ -743,7 +741,7 @@ On top of Bengio's suggestions, there have been many other attempts to merge Sys
 
 [^bengio-s1-s2]: Here’s a layperson-friendly summary of Yoshua Bengio’s talk: [(Dickson, 2019](https://bdtechtalks.com/2019/12/23/yoshua-bengio-neurips-2019-deep-learning/). And here’s the full hour-long talk [on SlidesLive](https://slideslive.com/38922304/from-system-1-deep-learning-to-system-2-deep-learning). The conference apparently doesn’t use YouTube? Well, [here’s a YouTube mirror anyway](https://www.youtube.com/watch?v=T3sxeTgT4qc).
 
-![Same graph as before, but with some speculative ways to change trajectories, so that AI hits the "human range"... and beyond?](../media/p1/JXxU9XED3easUD9RSqQKg3qcIcLIhvqTL8uVVta8NTOJ0CRcIfT7nLev_WZLzyTimmBQRbF5uS9NJ3hP81bUtJCpQnzQ0AGNfy4fU_3DmG4TE2gMsL1fl2uFHl7DiLGTjA5gx92k_sASt0oSbQnMjfw.png)
+![Same graph as before, but with some speculative ways to change trajectories, so that AI hits the "human range"... and beyond?](../media/p1/sys1vs2_C.png)
 All fascinating research directions, but none of them are the clear winner (yet).
 
 (Aside: [:What if System 1 & 2 just *are* the same thing?](#OneIsTwo))
@@ -826,9 +824,9 @@ Tying all this to AI's future: if it turns out that System 1 and 2 are much more
     </orbit-prompt>
     <orbit-prompt
         question="The trajectories of Old AI vs New AI, on a “System 1 vs System 2” graph:"
-        answer="TODO"
+        answer=""
+        answer-attachments="https://cloud-7769n1gum-hack-club-bot.vercel.app/0aisffs-trajectories.png">
         <!-- anki-image="aisffs-trajectories.png" -->
-        answer-attachments="https://anotheroldguy.files.wordpress.com/2019/03/placehold.jpg">
     </orbit-prompt>
     <orbit-prompt
         question="Why can't we 'just combine' old & new AI, to get AI that does both logic and intuition?"
@@ -867,12 +865,10 @@ Another complication is that a lot of research advances *both* "capabilities" an
 ### Awkward Alliance #2: Near-Risk "versus" Existential-Risk
 
 We can roughly sort AI risks on a 2 &times; 2 grid:[^miles-hat-tip]
-* Unintended accident vs Intentional abuse
-* Bad vs *VERY* Bad (existential risk to humanity)
+* Unintentional vs Intentional (or Accidents vs Abuse)
+* Bad vs *VERY* Bad (as in, existential risk)
 
 Examples for each kind:
-
-// TODO: a better 2 x 2
 
 ![2x2](../media/p1/2x2.png)
 
@@ -969,9 +965,8 @@ From [Altman (2021)](https://moores.samaltman.com/):
         answer="Features can advance both capabilities *and* safety. (Analogy: brakes & cruise control on cars)">
     </orbit-prompt>
     <orbit-prompt
-        question="The 2 x 2 grid of AI Risk concerns:"
-        answer="Accidental vs Abuse, Bad vs Existentially-Bad"
-        answer-attachments="https://anotheroldguy.files.wordpress.com/2019/03/placehold.jpg">
+        question="The two axes of AI Risk concerns:"
+        answer="1\) Unintentional vs Intentional (or Accidents vs Abuse) 2\) Bad vs Existential-Risk Bad">
     </orbit-prompt>
 </orbit-reviewarea>
 
@@ -1099,7 +1094,7 @@ AI's capabilities may accelerate at first, but then it'll grow at a steady pace,
 
 [^naam-et-al]: For a more detailed & mathematical explanation of Naam's argument, check out [my 3-minute summary here](https://blog.ncase.me/backlog/#project_10).
 
----
+. . .
 
 I tried my best to fairly "steelman" each side. Knowledgable people disagree.
 
@@ -1122,11 +1117,11 @@ However, these are experts in AI, *not* in forecasting, and experts generally su
 Why did AI experts vs Superforecasters have such different outlooks? In part, because "extraordinary claims require extraordinary evidence", but folks have very different "priors" on what's ordinary:
 
 * **AI-Skeptics:** C'mon, modern Homo Sapiens have been around for 300,000 years. So, we've survived 3000 centuries so far. The belief that *this* is the century we perish, while not impossible, requires *at least* 3000-to-1-odds amount of evidence.
-* **AI-Concerned:** C'mon, *almost all times* a group meets a "higher capabilities" group, it sucked for the former: when Native Americans met Colombus, when India met the British Empire. And now, we're *creating* a new "higher capabilities" entity: AI. And to remind you, *the creators of modern AI do not understand how it works*. So, it seems that *by default*, this will go very badly.
+* **AI-Concerned:** C'mon, *almost all times* a group meets a "higher capabilities" group, it sucked for the former: when Native Americans met Colombus, when India met the British Empire. And now, we're *creating* a new "higher capabilities" entity: AI. And to remind you, *the creators of modern AI do not understand how it works*, let alone how to give it "humane values". So, it seems that *by default*, this will go very badly.
 
 Two groups of smart folks disagree! So the study brought them together, to discuss and improve each others' understanding. Maybe they'll converge on the same answer? The exciting final result: AI experts revised their estimate from 25% to 20%, and the Superforecasters from 0.1% to 0.12%.
 
-Welp, so much for figuring out ``P(doom)``.
+Welp, so much for figuring out \\(P(\text{doom})\\).
 
 [^p-doom]: This & the following paragraphs refer to an "adversarial collaboration" study between AI-skeptical & AI-concerned researchers: [Rosenberg et al (2024) for the Forecasting Research Institute](https://forecastingresearch.org/news/ai-adversarial-collaboration). You can get a layperson-summary & context at [Dylan Matthews (2024) for Vox](https://www.vox.com/future-perfect/2024/3/13/24093357/ai-risk-extinction-forecasters-tetlock).
 
@@ -1142,15 +1137,11 @@ To avoid this circular-dependency paradox, we should think in terms of "conditio
 
 Let's revisit our previous (fake-but-useful) division of "AI Safety" versus "AI Capabilities", and plot it on a graph:
 
-// TODO: OH GOD CHANGE THE GREEN, IT'S UNREADABLE
-
 ![Rocket 1](../media/p1/Rocket%201.png)
 
 If Safety features outstrip Capabilities, that's good! We can keep AI safe! But if Capabilities features outstrip Safety, that's bad. That's an accident and/or intentional misuse waiting to happen.
 
 When AI has low Capabilities, the consequences aren't *too* bad. But with high Capabilities, that's high stakes:
-
-<!-- // TODO: a vertical-line threshold for "high-stakes capabilities"? -->
 
 ![Rocket 2](../media/p1/Rocket%202.png)
 
@@ -1210,9 +1201,9 @@ The first sparks of powerful AI are flying.
     </orbit-prompt>
     <orbit-prompt
         question="The 3 types of predictions for how fast AI would self-improve in an AI Takeoff: (visualize)"
-        answer="TODO"
+        answer=""
+        answer-attachments="https://cloud-fwg0387g3-hack-club-bot.vercel.app/0aisffs-takeoffs.png">
         <!-- anki-image="aisffs-takeoffs.png" -->
-        answer-attachments="https://anotheroldguy.files.wordpress.com/2019/03/placehold.jpg">
     </orbit-prompt>
     <orbit-prompt
         question="Argument for a 'FOOM' takeoff:"
@@ -1231,10 +1222,22 @@ The first sparks of powerful AI are flying.
         answer="The Titanic was slow & steady, yet still fatal.">
     </orbit-prompt>
     <orbit-prompt
+        question="The intuitive 'prior' for the Skeptic case on powerful AI"
+        answer="Humans have already survived for 300,000 years, chances that *this* is the (near-)final generation is low.">
+    </orbit-prompt>
+    <orbit-prompt
+        question="The intuitive 'prior' for the Cautious case on powerful AI"
+        answer="Usually in history, when a group meets a 'higher capabilities' group, it goes badly for the former.">
+    </orbit-prompt>
+    <orbit-prompt
+        question="Why trying to forecast 'probability of doom' may be a self-denying prophecy"
+        answer="If folks think P(doom) is low, they'll get complacent, so it'll happen. If folks think P(doom) is high, they'll react hard, and it'll be avoided">
+    </orbit-prompt>
+    <orbit-prompt
         question="Visualization of good/bad AI trajectories, on a Safety vs Capabilities graph:"
-        answer="TODO"
+        answer=""
+        answer-attachments="https://cloud-offppr5mb-hack-club-bot.vercel.app/0aisffs-goodbad.png">
         <!-- anki-image="aisffs-goodbad.png" -->
-        answer-attachments="https://anotheroldguy.files.wordpress.com/2019/03/placehold.jpg">
     </orbit-prompt>
 </orbit-reviewarea>
 
@@ -1276,18 +1279,9 @@ So before we see the proposed solutions to AI Safety, let's first try to break d
 
 Good question. Let's dive in!
 
-`(SIGN UP NEWSLETTER FOR RELEASE OF PART TWO: PROBABLY MAY 2024)`
+`(SIGN UP NEWSLETTER FOR RELEASE OF PART TWO: PROBABLY JULY 2024)`
 
 
-
-
-
-
-
-
----
-
-[^ANN-2012]: Mostly due to “big data”, faster computers, a looooooot of free human-generated text & labeled images online… and in particular, [a famous 2012 paper](https://proceedings.neurips.cc/paper_files/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf) about _AlexNet_, an ANN which totally blew away all previous records for AI image recognition.
 
 
 
