ack, fix directories etc

--- a/p1/p1.md
+++ b/p1/p1.md
@@ -178,7 +178,7 @@ Under-estimating how hard it is for an AI to do "easy" things — like recognize
 
 Want to actually remember what you've read here, instead of forgetting it all 2 days later? Here's an *optional* flashcard review for you!
 
-([:Learn more about "Spaced Repetition" flashcards](#SpacedRepetition). Alternatively, download [all of Part One's cards as an Anki deck](TODO))
+([:Learn more about "Spaced Repetition" flashcards](../#SpacedRepetition). Alternatively, download [all of Part One's cards as an Anki deck](TODO))
 
 <a id="review_1"></a>
 
@@ -1222,15 +1222,15 @@ The first sparks of powerful AI are flying.
         answer="The Titanic was slow & steady, yet still fatal.">
     </orbit-prompt>
     <orbit-prompt
-        question="The intuitive 'prior' for the Skeptic case on powerful AI"
+        question="The intuitive 'prior' for the Skeptic case on powerful AI:"
         answer="Humans have already survived for 300,000 years, chances that *this* is the (near-)final generation is low.">
     </orbit-prompt>
     <orbit-prompt
-        question="The intuitive 'prior' for the Cautious case on powerful AI"
+        question="The intuitive 'prior' for the Cautious case on powerful AI:"
         answer="Usually in history, when a group meets a 'higher capabilities' group, it goes badly for the former.">
     </orbit-prompt>
     <orbit-prompt
-        question="Why trying to forecast 'probability of doom' may be a self-denying prophecy"
+        question="Why trying to forecast 'probability of doom' may be a self-denying prophecy:"
         answer="If folks think P(doom) is low, they'll get complacent, so it'll happen. If folks think P(doom) is high, they'll react hard, and it'll be avoided">
     </orbit-prompt>
     <orbit-prompt
