Build fixes w Nunjucks, and chapter nativation

--- a/p1/p1.md
+++ b/p1/p1.md
@@ -1,4 +1,5 @@
-*(⏱ reading time: ~45 minutes)*
+**THIS IS A BETA DRAFT, DO NOT SHARE PUBLICLY YET PLZ, THX**
+
 
 First, a quick overview of AI past, present, and (possible) futures:
 
