warning to betareaders to not sign up for Orbit yet

--- a/p1/p1.md
+++ b/p1/p1.md
@@ -181,6 +181,8 @@ Want to actually remember what you've read here, instead of forgetting it all 2 
 
 ([:Learn more about "Spaced Repetition" flashcards](../#SpacedRepetition). Alternatively, download [all of Part One's cards as an Anki deck](TODO))
 
+**(Beta-readers: Hey don't sign up yet for Orbit, these flashcards may or may not change before the final version)**
+
 <a id="review_1"></a>
 
 <orbit-reviewarea>
