--- a/p1/p1.md
+++ b/p1/p1.md
@@ -185,7 +185,7 @@ Want to actually remember what you've read here, instead of forgetting it all 2 
 
 <a id="review_1"></a>
 
-<orbit-reviewarea>
+<orbit-reviewarea color="violet">
     <orbit-prompt
         question="Who's widely considered the founder of Computer Science & Artificial Intelligence?"
         answer="Alan Turing (this handsome fella)"
@@ -303,7 +303,7 @@ It's just a simple logical accident.
 
 <a id="review_2"></a>
 
-<orbit-reviewarea>
+<orbit-reviewarea color="violet">
     <orbit-prompt
         question="3 safety problems for AI Logic:"
         answer="1\) No common sense, 2\) 'Specification gaming', 3\) 'Instrumental convergence'.">
@@ -466,7 +466,7 @@ The moral of the story is there is no moral and there is no story. History is cr
 
 <a id="review_3"></a>
 
-<orbit-reviewarea>
+<orbit-reviewarea color="violet">
     <orbit-prompt
         question="Around when was the artificial neuron invented?"
         answer="In the 1940's — (1943, to be exact) — *before* the phrase 'Artificial Intelligence' was coined!">
@@ -550,7 +550,7 @@ Can't we just "pop open the hood" of an AI, find its biases/flaws, and fix 'em? 
 
 [^openai-apple]: From this OpenAI (2021) press release: [“Multimodal neurons in artificial neural networks”](https://openai.com/research/multimodal-neurons) (Section: "Attacks in the wild")
 
-[^tesla-fatality]: See [Tesla’s official 2016 blog post](%16https%3A//www.tesla.com/blog/tragic-loss), and [this article](https://electrek.co/2016/07/01/understanding-fatal-tesla-accident-autopilot-nhtsa-probe/) giving more detail into what happened, and what mistakes the AutoPilot AI may have made.
+[^tesla-fatality]: See [Tesla’s official 2016 blog post](https://www.tesla.com/blog/tragic-loss), and [this article](https://electrek.co/2016/07/01/understanding-fatal-tesla-accident-autopilot-nhtsa-probe/) giving more detail into what happened, and what mistakes the AutoPilot AI may have made.
 
 [^inner-misalignment]: This problem was first theoretically proposed in [Hubinger et al 2019](https://arxiv.org/pdf/1906.01820.pdf), then a real example was found in [Langosco et al 2021](https://arxiv.org/pdf/2105.14111.pdf)! For a layperson-friendly summary of both findings, see [Rob Mile's video](https://www.youtube.com/watch?v=zkbPdEHEyEI)
 
@@ -578,7 +578,7 @@ As of writing: we can't easily check, explain, or verify *any* of this stuff.
 
 <a id="review_4"></a>
 
-<orbit-reviewarea>
+<orbit-reviewarea color="violet">
     <orbit-prompt
         question="3 safety problems with AI 'Intuition':"
         answer="1\) It may learn human prejudices. 2\) It breaks easily, and in weird ways. 3\) It's an un-verifiable black box.">
@@ -687,7 +687,7 @@ Photo is by [Jamie Decillion on Wikipedia](https://commons.wikimedia.org/wiki/Fi
 
 <a id="review_5"></a>
 
-<orbit-reviewarea>
+<orbit-reviewarea color="violet">
     <orbit-prompt
         question="Moore's Law (*very* roughly paraphrased):"
         answer="“Every 2 years, computing power doubles.”">
@@ -779,7 +779,7 @@ We should probably invest a lot more research into making sure that goes... not-
 
 #### :x One Is Two
 
-An interesting comment from my co-author Lexi Mattick prompted this question: **what if System 2 reasoning just _is_ a bunch of System 1 reflexes?**
+An interesting comment from my friend Lexi Mattick prompted this question: **what if System 2 reasoning just _is_ a bunch of System 1 reflexes?**
 
 For example: "What's 145 + 372?"
 
@@ -811,7 +811,7 @@ Tying all this to AI's future: if it turns out that System 1 and 2 are much more
 
 <a id="review_6"></a>
 
-<orbit-reviewarea>
+<orbit-reviewarea color="violet">
     <orbit-prompt
         question="“System 1” is..."
         answer="Fast, all-at-once intuition. Thinking in vibes.">
@@ -961,7 +961,7 @@ From [Altman (2021)](https://moores.samaltman.com/):
 
 <a id="review_7"></a>
 
-<orbit-reviewarea>
+<orbit-reviewarea color="violet">
     <orbit-prompt
         question="The 2 awkward alliances in AI Safety:"
         answer="1\) Between Capabilities 'versus' Safety, and 2\) Between Near-Risk 'versus' Existential-Risk.">
@@ -1192,7 +1192,7 @@ The first sparks of powerful AI are flying.
 
 <a id="review_8"></a>
 
-<orbit-reviewarea>
+<orbit-reviewarea color="violet">
     <orbit-prompt
         question="‘Artificial General Intelligence’ (AGI) is a vague way to point at:"
         answer="‘Software that can do important knowledge-based tasks at a human-expert level or better’. (e.g. Automatic scientific discovery)">
