--- a/p1/p1.md
+++ b/p1/p1.md
@@ -1285,8 +1285,19 @@ So before we see the proposed solutions to AI Safety, let's first try to break d
 
 Good question. Let's dive in!
 
-`(SIGN UP NEWSLETTER FOR RELEASE OF PART TWO: PROBABLY JULY 2024)`
+// OH NO
 
+Oh. Eeeeeeesh. 😬
+
+Sorry for the cliffhanger. Look, these 20,000 words *with illustrations* took me a long time to make, ok? **Part Two** will be out July 2024, **Part Three** will be out October 2024.
+
+In the meantime, *two* things you can do.
+
+1) Sign up to be notified when the next chapters come out: ⤵
+
+{% include 'templates/signup.html' %}
+
+And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span style='display: inline-block; transform: scale(6) translate(6px,3px);'>⤵</span>
 
 
 
