Holy moly fixing these horrible footnote bugs

--- a/p1/p1.md
+++ b/p1/p1.md
@@ -1289,7 +1289,7 @@ Good question. Let's dive in!
 
 Oh. Eeeeeeesh. 😬
 
-Sorry for the cliffhanger. Look, these 20,000 words *with illustrations* took me a long time to make, ok? **Part Two** will be out July 2024, **Part Three** will be out October 2024.
+Sorry for the cliffhanger. Look, these 20,000+ words *with illustrations* took me a long time to make, ok? **Part Two** will be out July 2024, **Part Three** will be out October 2024.
 
 In the meantime, *two* things you can do.
 
