Really cool next button

--- a/p1/p1.md
+++ b/p1/p1.md
@@ -1285,7 +1285,7 @@ So before we see the proposed solutions to AI Safety, let's first try to break d
 
 Good question. Let's dive in!
 
-// OH NO
+{% include 'templates/next_page_button.html' %}
 
 Oh. Eeeeeeesh. 😬
 
