A whole lot of tiny fixes I don't even remember anymore

--- a/p1/p1.md
+++ b/p1/p1.md
@@ -1297,7 +1297,7 @@ In the meantime, *two* things you can do.
 
 {% include 'templates/signup.html' %}
 
-And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span style='display: inline-block; transform: scale(6) translate(6px,3px);'>⤵</span>
+And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span style='display: inline-block; transform: scale(6) translate(6px,3px); font-size:19px; line-height:19px; height:19px;'>⤵</span>
 
 
 
