THE MOST HELPFUL COMMIT MESSAGE IN THE WORLD

--- a/p1/p1.md
+++ b/p1/p1.md
@@ -1289,15 +1289,15 @@ Good question. Let's dive in!
 
 Oh. Eeeeeeesh. 😬
 
-Sorry for the cliffhanger. Look, these 20,000+ words *with illustrations* took me a long time to make, ok? **Part Two** will be out July 2024, **Part Three** will be out October 2024.
+Sorry for the cliffhanger. Look, the 20,000+ words so far *with illustrations* took me a long time to make, ok? **Part Two** will be out July 2024, **Part Three** will be out October 2024.
 
-In the meantime, *two* things you can do.
+In the meantime, 2 things you can do!
 
-1) Sign up to be notified when the next chapters come out: ⤵
+1\) Sign up to be notified when the next chapters come out: ⤵
 
 {% include 'templates/signup.html' %}
 
-And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span style='display: inline-block; transform: scale(6) translate(6px,3px); font-size:19px; line-height:19px; height:19px;'>⤵</span>
+And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span style='display: inline-block; transform: scale(6); font-size: 19px; line-height: 8px; height: 14px; transform-origin: top left;'>⤵</span>
 
 
 
