--- a/p1/p1.md
+++ b/p1/p1.md
@@ -1297,7 +1297,8 @@ In the meantime, 2 things you can do!
 
 {% include 'templates/signup.html' %}
 
-And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! ⤵ <!--span style='display: inline-block; transform: scale(6); font-size: 19px; line-height: 8px; height: 14px; transform-origin: top left;'>⤵</span TODO: fix this...-->
+And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span class='NEXT_ARROW'><img src="../media/misc/NEXT_ARROW.png"></span>
+
 
 
 
