aahhhh anki not building

--- a/p1/p1.md
+++ b/p1/p1.md
@@ -192,7 +192,7 @@ Underestimating how hard it is for an AI to do "easy" things — like recognize 
 
 Want to actually remember what you've read here, instead of forgetting it all 2 days later? Here's an *optional* flashcard review for you!
 
-([:Learn more about "Spaced Repetition" flashcards](../#SpacedRepetition). Alternatively, use [Anki](https://apps.ankiweb.net/) and get [Part One's cards as an Anki deck](TODO))
+([:Learn more about "Spaced Repetition" flashcards](../#SpacedRepetition).<!--Alternatively, use [Anki](https://apps.ankiweb.net/) and get [Part One's cards as an Anki deck](TODO)-->)
 
 <orbit-reviewarea color="violet">
     <orbit-prompt
@@ -1379,7 +1379,7 @@ Let's recap:
 
 **4)** 🤷 Experts wildly disagree on *everything* about the future of AI: When we'll get AGI, how fast AGI would self-improve, whether our trajectory is towards a good or bad place.
 
-(If you skipped the flashcards & would like to review them now, click the Table of Contents icon in the right sidebar, then click the "🤔 Review" links. Alternatively, download the [Anki deck for Part One](TODO).)
+(If you skipped the flashcards & would like to review them now, click the Table of Contents icon in the right sidebar, then click the "🤔 Review" links.<!--Alternatively, download the [Anki deck for Part One](TODO).-->)
 
 ---
 
