--- a/p1/p1.md
+++ b/p1/p1.md
@@ -1298,6 +1298,8 @@ The first sparks of powerful AI are flying.
 
 *Can we control what we've made?*
 
+<img alt="Robot Catboy & Ham the Human sitting around a laptop on fire. Ham's roasting a marshmallow over it." src="../media/p1/fire.png" style="border:none; width:100%;"/>
+
 ---
 
 ### 🤔 Review #8 (last one!)
