--- a/p1/p1.md
+++ b/p1/p1.md
@@ -192,7 +192,7 @@ Underestimating how hard it is for an AI to do "easy" things — like recognize 
 
 Want to actually remember what you've read here, instead of forgetting it all 2 days later? Here's an *optional* flashcard review for you!
 
-([:Learn more about "Spaced Repetition" flashcards](../#SpacedRepetition).<!--Alternatively, use [Anki](https://apps.ankiweb.net/) and get [Part One's cards as an Anki deck](TODO)-->)
+([:Learn more about "Spaced Repetition" flashcards](../#SpacedRepetition).<!--Alternatively, use [Anki](https://apps.ankiweb.net/) and get [Part One's cards as an Anki deck](https://ankiweb.net/shared/info/219158432)-->)
 
 <orbit-reviewarea color="violet">
     <orbit-prompt
@@ -897,7 +897,7 @@ For better and worse, a ragtag team of awkward alliances:
 
 There are some folks working on making AI more powerful. (AI Capabilities) There are some folks working on making AI more humane. (AI Safety) These are often the *same* folks.
 
-(Bonus: [: a not-comprehensive Who's Who of AI/Safety organizations](#AIOrganizations))
+(Bonus: [: a not-comprehensive Who's Who of AI/Safety orgs](#AIOrganizations))
 
 One perspective is that Capabilities & Safety *should* be unified. There's no separation between "bridge capabilities" and "bridge safety", it's all *the same field* of engineering.[^arbital] Besides, how can you do cutting-edge safety research without access to cutting-edge capabilities? That'd be like trying to design air traffic control towers with Da Vinci's sketches of flying machines.[^anthropic]
 
@@ -911,7 +911,7 @@ Another complication is that research can advance *both* "capabilities" and "saf
 
 [^arbital]: Hat tip to [Arbital](https://arbital.com/p/ai_alignment/) for this analogy.
 
-[^anthropic]: [From one of the leading AI + AI Safety labs](https://www.anthropic.com/news/anthropics-responsible-scaling-policy): “[We have] consistently found that working with frontier AI models is an essential ingredient in developing new methods to mitigate the risk of AI.”
+[^anthropic]: [From one of the leading AI + AI Safety labs, Anthropic](https://www.anthropic.com/news/anthropics-responsible-scaling-policy): “[We have] consistently found that working with frontier AI models is an essential ingredient in developing new methods to mitigate the risk of AI.”
 
 [^acx]: Quote from [Astral Codex Ten (2022)](https://www.astralcodexten.com/p/why-not-slow-ai-progress)
 
@@ -934,7 +934,7 @@ As for organizations that *ONLY* do AI Safety:
 
 1. **Alignment Research Center (ARC)**, founded by the pioneer behind RLHF, Paul Christiano. Their first report & big hit was *Eliciting Latent Knowledge* (ELK): basically, trying to read an ANN's "mind".
 2. **Model Evaluation & Threat Research (METR, pronounced "meter")** is a spinoff org from ARC, formerly called ARC Evals. They make "smoke alarms" for AI Capabilities, so we know when they're at dangerous levels. They currently have partnerships with US & UK governments, so that's nice traction.
-3. **Machine Intelligence Research Institute (MIRI)** is probably *the* oldest AI Safety org (founded 2000). For better and worse, they focus entirely on "AI Logic/game theory" problems, and — (unlike all the above orgs) — they haven't touched Deep Learning. Which *seems* like they bet on the wrong horse, but maybe once ANNs can robustly do System 2 logic, their work will be important again. In the meantime, MIRI writes cool math papers, like *Functional Decision Theory.*
+3. **Machine Intelligence Research Institute (MIRI)** is probably *the* oldest AI Safety org (founded 2000). For better and worse, they focus entirely on "AI Logic/game theory" problems, and — unlike all the above orgs — they've never touched Deep Learning. Which *seems* like they bet on the wrong horse, but maybe once ANNs can robustly do System 2 logic, their work will be important again. In the meantime, MIRI writes cool math papers, like *Functional Decision Theory.*
 
 Remember, retweets\* are NOT endorsements. I'm just listing the most talked-about orgs in this space right now.
 
@@ -992,7 +992,7 @@ Other notes on AI Economics:
 * There's currently legal debate on whether artists & authors can sue AI for theft/plagiarism. The only 3 things I'll say about this are:
     1. *Personally,* I'll only use generative AI for private/research use, but any stuff I publish publicly must be human-made.
     2. I don't see how one can draw a line where sampling music is legal but AI "sampling" from artists isn't, but:
-    3. Things can still be legal but very rude, like farting in an elevator.
+    3. Things can still be legal but very rude, like farting in an elevator. Maybe AI art, especially AI that imitates a specific living artist's style, falls in this "legal but scummy" category.
 
 #### :x AI Relationships
 
@@ -1024,12 +1024,10 @@ For a summary of what I think are the most convincing arguments for & against th
 
 Other notes on AI Consciousness:
 
-* Whether or not computers can be conscious, I'm pretty sure human neurons are conscious — that's what you & I are "running on" right now. Well, [scientists are currently growing human neurons on chips and training them to do computational tasks.](https://www.technologyreview.com/2023/12/11/1084926/human-brain-cells-chip-organoid-speech-recognition/) I have no mouth and I must scream.
-* If a friend I knew died, but "uploaded" themself into a computer — even if I didn't believe the simulation is conscious — I'd still treat their "upload" as my good ol' friend, because 1) I miss them, and 2) It's what they would've wanted.
+* Whether or not computers can be conscious, I'm pretty sure human neurons are conscious. Well, [scientists are currently growing human neurons on chips and training them to do computational tasks.](https://www.technologyreview.com/2023/12/11/1084926/human-brain-cells-chip-organoid-speech-recognition/) I have no mouth and I must scream.
+* If a friend I knew died, but "uploaded" themself into a computer — even if I didn't believe the simulation is conscious — I'd still treat their "upload" as my good ol' friend, because 1) I'd miss them, and 2) It's what they would've wanted.
 * One reason to *not* be cruel to a non-conscious AI: your interactions will likely go into some future AI's training data, and *that* AI will learn — "correctly" — to be cruel.
-* As Kurt Vonnegut once wrote: *“We are what we pretend to be, so we must be careful about what we pretend to be.”*
-
-Anyway, that's why I always start my ChatGPT conversations with "Hello!" and end with "Thank you, see you later!"
+* As Kurt Vonnegut once wrote: *“We are what we pretend to be, so we must be careful about what we pretend to be.”* And that's why I always start my ChatGPT conversations with "Hello!" and end with "Thank you, see you later!"
 
 #### :x Altman on Georgism
 
@@ -1098,7 +1096,7 @@ Notes:
 * *Wow* there's huge uncertainty, from "in the next few years" to "over 100 years from now".
 * The median guess is around 2060, within many younger folks' natural lifespans. (This roughly agrees with estimates based off technological metrics.[^timeline-estimates] But again, with *huge* uncertainty.)
 
-(aside: [: my personal forecast](#MyForecast))
+(Aside: [: my personal forecast](#MyForecast))
 
 [^timeline-estimates]: Ajeya Cotra's *["Forecasting Transformative AI with Biological Anchors"](https://www.lesswrong.com/posts/KrJfoZzpSDpnrv9va/draft-report-on-ai-timelines)* is the most comprehensive forecast project with this method. It's a zillion pages long and still in "draft mode", so for a summary, see [Holden Karnofsky (2021)](https://www.cold-takes.com/forecasting-transformative-ai-the-biological-anchors-method-in-a-nutshell/), in particular the first chart.
 
@@ -1127,19 +1125,19 @@ lol i dunno, let's say ~2060 as well
 
 *(Warning: no attempt to simplify jargon in the following. Sorry.)*
 
-Fine. My suspicion is that biologically-inspired AI is the right path — it's worked so far, with artificial neural networks, and convolution (inspired by mammalian visual cortices).
+Fine. My suspicion is that biologically-inspired AI is the right path; it's worked so far, with ANNs & convolution (inspired by mammalian visual cortices).
 
-But, counter-argument: some of the most important discoveries in ANNs, in particular backpropagation (how ANNs learn), are completely biologically implausible.
+But, counter-argument: some of the most important discoveries in Deep Learning (DL), like backpropagation, are completely biologically implausible.
 
-My counter-counter-intuition: Yes, *that's what's holding Deep Learning back.* So many recent advances in DL are basically *getting around* the problems of backpropagation: ResNets, ReLU, Transformers, etc. The human cortex has only 6 layers of neurons. GPT-4 has *120 layers* of neurons, and requires more training data than a human could ever see in thousands of lifetimes.
+My counter-counter-intuition: Yes, *that's what's holding Deep Learning back.* So many recent advances in DL are basically *getting around* the problems with backpropagation: ResNets, ReLU, Transformers, etc. The human cortex has only 6 layers of neurons. GPT-4 has *120 layers* of neurons, and requires more training data than a human could see in thousands of lifetimes.
 
-So, my current "inside view" mental model of AI (subject to future revision, of course) is that our main bottleneck isn't scale. (Also see the Scaling section for why I'm skeptical on scale.) Our main bottleneck is not understanding how human brains work.
+So, my *current* mental model of AI, is that our main bottleneck isn't scale. (Also see the Scaling section for why I'm skeptical on scale.) Our main bottleneck is *not understanding how human brains work.*
 
-But compared to big mysteries like "how does the brain make consciousness" or "why do we sleep & dream", this would "only" require solving smaller mysteries like "how do neurons learn, even when the reward is very far away" or "how do we even recognize the difference between 'red square, yellow triangle' and 'yellow square, red triangle'? Which, surprisingly, has still been unsolved for decades.
+But compared to big mysteries like, "how does the brain make consciousness" or "why do we sleep & dream"... I suspect this "only" requires solving smaller mysteries like, "how do neurons learn, even when the reward is very far away" or, "how do we even recognize the difference between 'red square, yellow triangle' and 'yellow square, red triangle'? (Surprisingly, both of these have still been unsolved for decades!)
 
-I reckon once we solve *those* mysteries, we can "just" simplify & simulate them in computers — like we did with McColloch & Pitts's neurons — then get "AGI".
+I reckon once we solve *those* mysteries, we can "just" simplify & simulate them in computers — like we did with McColloch & Pitts's neurons — and voilà, we'll get "AGI".
 
-So *when* will we solve those "small" mysteries, at the speed of our regular, normal science?
+So *when* will we solve those "small" mysteries, with our regular science?
 
 lol i dunno, let's say ~2060 as well
 
@@ -1381,7 +1379,7 @@ Let's recap:
 
 **4)** 🤷 Experts wildly disagree on *everything* about the future of AI: When we'll get AGI, how fast AGI would self-improve, whether our trajectory is towards a good or bad place.
 
-(If you skipped the flashcards & would like to review them now, click the Table of Contents icon in the right sidebar, then click the "🤔 Review" links.<!--Alternatively, download the [Anki deck for Part One](TODO).-->)
+(If you skipped the flashcards & would like to review them now, click the Table of Contents icon in the right sidebar, then click the "🤔 Review" links.<!--Alternatively, download the [Anki deck for Part One](https://ankiweb.net/shared/info/219158432).-->)
 
 ---
 
