Added Anki link, also credit another friend I forgot to credit earlier

--- a/p1/p1.md
+++ b/p1/p1.md
@@ -192,7 +192,7 @@ Underestimating how hard it is for an AI to do "easy" things — like recognize 
 
 Want to actually remember what you've read here, instead of forgetting it all 2 days later? Here's an *optional* flashcard review for you!
 
-([:Learn more about "Spaced Repetition" flashcards](../#SpacedRepetition).<!--Alternatively, use [Anki](https://apps.ankiweb.net/) and get [Part One's cards as an Anki deck](https://ankiweb.net/shared/info/219158432)-->)
+([:Learn more about "Spaced Repetition" flashcards](../#SpacedRepetition). Alternatively, use [Anki](https://apps.ankiweb.net/) and get [Part One's cards as an Anki deck](https://ankiweb.net/shared/info/219158432))
 
 <orbit-reviewarea color="violet">
     <orbit-prompt
@@ -1131,7 +1131,7 @@ But, counter-argument: some of the most important discoveries in Deep Learning (
 
 My counter-counter-intuition: Yes, *that's what's holding Deep Learning back.* So many recent advances in DL are basically *getting around* the problems with backpropagation: ResNets, ReLU, Transformers, etc. The human cortex has only 6 layers of neurons. GPT-4 has *120 layers* of neurons, and requires more training data than a human could see in thousands of lifetimes.
 
-So, my *current* mental model of AI, is that our main bottleneck isn't scale. (Also see the Scaling section for why I'm skeptical on scale.) Our main bottleneck is *not understanding how human brains work.*
+So, my *current* mental model of AI, is that our main bottleneck is *not* scale. (Also see the Scaling section for why I'm skeptical on scale.) Our main bottleneck is *not understanding how human brains work.*
 
 But compared to big mysteries like, "how does the brain make consciousness" or "why do we sleep & dream"... I suspect this "only" requires solving smaller mysteries like, "how do neurons learn, even when the reward is very far away" or, "how do we even recognize the difference between 'red square, yellow triangle' and 'yellow square, red triangle'? (Surprisingly, both of these have still been unsolved for decades!)
 
@@ -1379,7 +1379,7 @@ Let's recap:
 
 **4)** 🤷 Experts wildly disagree on *everything* about the future of AI: When we'll get AGI, how fast AGI would self-improve, whether our trajectory is towards a good or bad place.
 
-(If you skipped the flashcards & would like to review them now, click the Table of Contents icon in the right sidebar, then click the "🤔 Review" links.<!--Alternatively, download the [Anki deck for Part One](https://ankiweb.net/shared/info/219158432).-->)
+(If you skipped the flashcards & would like to review them now, click the Table of Contents icon in the right sidebar, then click the "🤔 Review" links. Alternatively, download the [Anki deck for Part One](https://ankiweb.net/shared/info/219158432).)
 
 ---
 
