AI SAFETY PART TWO

--- a/p1/p1.md
+++ b/p1/p1.md
@@ -573,7 +573,7 @@ Can't we just "pop open the hood" of an AI, find its biases/flaws, and fix 'em? 
 
 [^tesla-fatality]: See [Tesla’s official 2016 blog post](https://www.tesla.com/blog/tragic-loss), and [this article](https://electrek.co/2016/07/01/understanding-fatal-tesla-accident-autopilot-nhtsa-probe/) giving more detail into what happened, and what mistakes the AutoPilot AI may have made.
 
-[^self-driving]: However, I *do* feel ethically compelled to remind you that, despite all that, self-driving cars are *way* safer than human drivers in similar scenarios. (~85% safer. See [Hawkins (2023) for The Verge](https://www.theverge.com/2023/12/20/24006712/waymo-driverless-million-mile-safety-compare-human)) Worldwide, a million people die in traffic accidents *every year.* Hairless primates should *not* be moving a two-tonne thing at 50mph.
+[^self-driving]: However, I *do* feel ethically compelled to remind you that, despite all that, self-driving cars are *way* safer than human drivers in similar scenarios. (~85% safer. See [Hawkins (2023) for The Verge](https://www.theverge.com/2023/12/20/24006712/waymo-driverless-million-mile-safety-compare-human)) Worldwide, a million people die in traffic accidents *every year.* Hairless primates should *not* be moving a two-tonne thing at 60mph.
 
 [^inner-misalignment]: This problem was first theoretically proposed in [Hubinger et al 2019](https://arxiv.org/pdf/1906.01820.pdf), then a real example was found in [Langosco et al 2021](https://arxiv.org/pdf/2105.14111.pdf)! For a layperson-friendly summary of both findings, see [Rob Miles's video.](https://www.youtube.com/watch?v=zkbPdEHEyEI)
 
@@ -983,7 +983,7 @@ But there's a reason why *this* time is different: modern AI is *general*. GPT c
 
 Post-scarcity utopia, or Serfdom 2.0? *That* is the tricky problem of AI economics for the next century.
 
-(For what it's worth — *whatever* it's worth — Sam Altman, CEO of OpenAI, [:is a fan of Georgism & basic income.](#AltmanOnGeorgism))
+(For what it's worth, Sam Altman, CEO of OpenAI, [:is a fan of Georgism & basic income.](#AltmanOnGeorgism))
 
 Other notes on AI Economics:
 
@@ -1393,21 +1393,10 @@ So before we see the proposed solutions to AI Safety, let's first try to break d
 
 > _**How do we ensure that AI robustly serves humane values?**_
 
-Good question. Let's dive in!
+Good question. Let's dive in! 👇
 
 {% include 'templates/next_page_button.html' %}
 
-Oh. Eeeeeeesh. 😬
-
-Sorry for the cliffhanger. Look, the 20,000+ words so far *with illustrations* took a long time to make, ok? **Part Two** will be out July 2024, **Part Three** will be out October 2024.
-
-In the meantime, 2 things you can do!
-
-1\) Sign up to be notified when the next chapters come out: ⤵
-
-{% include 'templates/signup.html' %}
-
-And 2) Check out the other stuff I've made, or learn more about Hack Club, in the credits below! <span class='NEXT_ARROW'><img src="../media/misc/NEXT_ARROW.png"></span>
 
 
 
