--- a/p2/p2.md
+++ b/p2/p2.md
@@ -51,7 +51,13 @@ This is called **Goal Mis-specification** (also called Reward Mis-specification)
 
 (If you forgot from Part One, here's how [:seemingly-obvious ways to make "humane AI" can go wrong](#WaysToMakeHumaneAIGoingWrong). Bonus: [:even *passive* goals like "predict something" can lead to harmful results!](#StoryOfPassivePredictionLeadingToHarm) 👈 *OPTIONAL: Click to expand these texts!*)
 
-Okay, but enough recapping the basics. Let's introduce you to:
+*(Also — if you'd like to be notified when Part 3: The Proposed Solutions is out, around Halloween, sign up below! If you're a high-schooler you can also get free stickers 👇)*
+
+{% include 'templates/signup.html' %}
+
+. . .
+
+Anyway, enough recapping the basics. Let's introduce you to:
 
 **How this relates to core ideas from other fields:**
 * Economics
@@ -1350,7 +1356,7 @@ The other half is, well, solving it.
 
 After two long chapters, finally, we can understand the top proposed solutions to *every* sub-part of the Alignment Problem! Stay tuned for the grand finale, Part 3, of AI Safety for Fleshy Humans, coming **Halloween 2024!** 🎃
 
-Sign up to be notified when the final part is out: ⤵
+Sign up to be notified when the final part is out: 👇
 
 {% include 'templates/signup.html' %}
 
