--- a/p2/p2.md
+++ b/p2/p2.md
@@ -9,7 +9,7 @@
 
 I'll also remind you of the problem we're trying to state & solve! It is the Value Alignment Problem:
 
-> **_How can make AIs that robustly serve humane values?_**
+> **_How can we make AIs that robustly serve humane values?_**
 
 As elaborated in Part One, we can break this problem up like so:
 
