More typos fixed

--- a/p2/p2.md
+++ b/p2/p2.md
@@ -1012,7 +1012,7 @@ Anyway, this problem is called **Goal Mis-generalization**. (It was originally c
 
 [^mesa-optimizer]: The theoretical possibility of this problem was first described by [Hubinger et al 2019](https://arxiv.org/pdf/1906.01820). In the paper, they called this problem "inner misalignment", and gave us the AI Alignment meme of ["Deceptively Aligned Mesa-Optimizers"](https://www.astralcodexten.com/p/deceptively-aligned-mesa-optimizers). You see, it's funny, because researchers suck at naming things. They suck so bad, it's funny. It's funny.
 
-Goal Mis-generalization is confusing, in part because it seems ssimilar to Problem 1: Goal Mis-*specification* and Problem 4: Lack of Robustness. (Some researchers even question if Goal Mis-generalization vs Mis-specification is even a useful divide![^shard])
+Goal Mis-generalization is confusing, in part because it seems similar to Problem 1: Goal Mis-*specification* and Problem 4: Lack of Robustness. (Some researchers even question if Goal Mis-generalization vs Mis-specification is even a useful divide![^shard])
 
 [^shard]: As described by Alex Turner, research scientist at Google DeepMind, [puts it](https://www.alignmentforum.org/posts/gHefoxiznGfsbiAu9/inner-and-outer-alignment-decompose-one-hard-problem-into): “Inner and outer alignment [goal mis-generalization & goal mis-specification] decompose one hard problem into two extremely hard problems”. Alex Turner is also one of the pioneers behind [Shard Theory](https://www.lesswrong.com/posts/xqkGmfikqapbJ2YMj/shard-theory-an-overview), a research program for how "reinforcement-learning" AIs can learn human values piece-by-piece.
 
@@ -1289,13 +1289,13 @@ The tech-company billionaires who run the biggest AI labs? The US government, wh
 
 [^owid-gay]: Source: [Our World In Data](https://ourworldindata.org/grapher/share-of-people-who-think-homosexuality-is-never-justified?tab=chart&country=CHN~IND~USA~IDN~PAK~BRA~NGA~BGD~RUS~MEX). The 10 countries selected in that chart are the Top 10 most populous countries; note how 7 out of 10 of them reported 75%+ agreement with the statement that "homosexuality is never justifiable". I won't do the full math, but I'm pretty sure if you took the top 30 most populous countries, multiply by what ratio agrees, then add 'em up... you'd get over 4 billion agreeing, a majority, out of the 8 billion folks on Earth.
 
-[^mlk]: Two years before MLK's death in 1968, Gallup polls showed that in 1966, 63% of Americans felt *unfavorably* of MLK, while 33% felt favorably, an almost 2-to-1 ratio. If we only consider "highly un/favorable", the ratio gets rose: 44% to 12%, almost 4-to-1. Source: [Pew Research Center](https://www.pewresearch.org/short-reads/2023/08/10/how-public-attitudes-toward-martin-luther-king-jr-have-changed-since-the-1960s/), see first figure.
+[^mlk]: Two years before MLK's death in 1968, Gallup polls showed that in 1966, 63% of Americans felt *unfavorably* of MLK, while 33% felt favorably, an almost 2-to-1 ratio. If we only consider "highly un/favorable", the ratio gets worse: 44% to 12%, almost 4-to-1. Source: [Pew Research Center](https://www.pewresearch.org/short-reads/2023/08/10/how-public-attitudes-toward-martin-luther-king-jr-have-changed-since-the-1960s/), see first figure.
 
 [^inter-racial-marriage]: The US Supreme Court legalized inter-racial marriage nationwide in the 1967 case, *Loving vs Virginia.* [According to Gallup polls](https://news.gallup.com/poll/354638/approval-interracial-marriage-new-high.aspx), the majority of US folks approved of Black-White marriage only in 1997, *30 years later*. [Generational cohorts](https://en.wikipedia.org/wiki/Generation#/media/File:Generation_timeline.svg) are usually defined to be ~20 years long, so, that's 1½ generations later. (Hat tip to [this xkcd](https://xkcd.com/1431/) for teaching me about this.)
 
 "Fine," you concede, "everybody's values & wants, *but* if we cured all the trauma that makes us bigoted, if we were all wise & compassionate, and really got to know the facts and each other." This *is* one of the better proposals (which we'll cover in AI Safety Part 3[^cev]), but it's still a tall order, and kicks the question down: *whose* definition of "wise", or "compassionate"?
 
-[^cev]: Spoiler: this idea is similar to (but not exactly the same) as *Coherent Extrapolated Volition* ([Yudkowski 2004](https://intelligence.org/files/CEV.pdf)), which we'll learn more in AI Safety for Fleshy Humans Part 3!
+[^cev]: Spoiler: this idea is similar to (but not exactly the same) as *Coherent Extrapolated Volition* ([Yudkowsky 2004](https://intelligence.org/files/CEV.pdf)), which we'll learn more in AI Safety for Fleshy Humans Part 3!
 
 . . .
 
