--- a/p2/p2.md
+++ b/p2/p2.md
@@ -1059,7 +1059,7 @@ So: even though we *correctly specified* the goal (get coin), the AI learnt a *t
 
 ([:Technical side - how do we know what goal an AI 'really' has?](#GMGGoals))
 
-But why's the AI mis-learn a goal? It's as I over-explained in Problem #5: **most modern AI systems only do correlation, not causation.** In the above AI's training data, "go all the way to the end" correlated strongly with a high reward.  In the new levels, this correlation stopped, but the AI kept its "habit" anyway.
+But why's the AI mis-learning a goal? It's as I over-explained in Problem #5: **most modern AI systems only do correlation, not causation.** In the above AI's training data, "go all the way to the end" correlated strongly with a high reward.  In the new levels, this correlation stopped, but the AI kept its "habit" anyway.
 
 Let's draw this as a causal diagram! Training levels with the coin at the end *causes* both AI going to the end and AI going to the coin... which causes a *confounded correlation* between "go to end" & "go to coin". But only "go to coin" *actually causes* getting a reward:
 
@@ -1539,7 +1539,7 @@ At least, nobody (yet) has found a non-contrived confirmed example of an ANN wit
 
 But for now, we can **take the "intentional stance", and say if an AI is acting *as if* it has some Goal/Reward X.** (X is part of its ["Consistent Reward Set"](https://openreview.net/pdf?id=pErdjpoc-w3))
 
-For example, if we see an AI *competently* dodging obstacles to get to the end of a level, we can say it's acting *as if* it's goal is to get to the end of a level. Even if the AI is "really" just a bunch of goal-less reflexes like "If gap, Then jump over", etc.
+For example, if we see an AI *competently* dodging obstacles to get to the end of a level, we can say it's acting *as if* its goal is to get to the end of a level. Even if the AI is "really" just a bunch of goal-less reflexes like "If gap, Then jump over", etc.
 
 (Hey, maybe deep down, *all* our human goals are made up of goal-less mental reflexes?? e.g. "I want to write a good explainer article" => "If sentence is abstract, Then put a concrete example nearby", etc...)
 
